--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body{
 }
 #colorButton {
     background-color:#2C3E50;
-    color:white;
+    color:whitesmoke;
     border: none;
     cursor: pointer;
     height: 2.5rem;
